створено блок filters

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,8 +13,8 @@
             <a href="/"><span>WEB</span>Studio</a>
         <nav>
             <ul>
-                <li><a href=""></a>Studio</a></li>
-                <li><a href=""></a>Portfolio</a></li>
+                <li><a href="">Studio</a></li>
+                <li><a href="">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
@@ -24,8 +24,16 @@
             </ul>
     </header>
 
-
-
+<!--Main-->
+    <!--filters-->
+    <ul>
+        <li><button type="button">All</button></li>
+        <li><button type="button">Web Site</button></li>
+        <li><button type="button">App</button></li>
+        <li><button type="button">Design</button></li>
+        <li><button type="button">Marketing</button></li>
+    </ul>
+    
 
 
  <!--Footer-->
