створення блоку row1

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,27 @@
         <li><button type="button">Design</button></li>
         <li><button type="button">Marketing</button></li>
     </ul>
+    <!--Row-1-->
+    <ul>
+        <li>
+            <img src="image/interface.jpg" alt="interface" width="360">
+            <h3>Banking App Interface Concept</h3>
+            <p>App</p>
+        </li>
+        <li>
+            <img src="image/payment.jpg" alt="payment" width="360">
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+        </li>
+        <li>
+            <img src="image/meditaion.jpg" alt="meditaion" width="360">
+            <h3>Meditaion App</h3>
+            <p>App</p>
+        </li>
+    </ul>
     
+    
+
 
 
  <!--Footer-->
