--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,28 @@
             <p>App</p>
         </li>
     </ul>
+
+    <!--Row-2-->
+
+    <!--Row-3-->
     
+    <ul>
+        <li>
+            <img src="image/stories.jpg" alt="" width="360">
+            <h3>Instagram Stories Concept</h3>
+            <p>Design</p>
+        </li>
+        <li>
+            <img src="image/organic food.jpg" alt="" width="360">
+            <h3>Organic Food</h3>
+            <p>Web Site</p>
+        </li>
+        <li>
+            <img src="image/coffee.jpg" alt="" width="360">
+            <h3>Fresh Coffee</h3>
+            <p>Web Site</p>
+        </li>
+    </ul>
     
 
 
