--- a/portfolio.html
+++ b/portfolio.html
@@ -54,6 +54,24 @@
 
     <!--Row-2-->
 
+    <ul>
+        <li>
+            <img src="image/taxi.jpg" alt="taxi" width="360">
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+        </li>
+        <li>
+            <img src="image/illustrations.jpg" alt="illustrations" width="360">
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+        </li>
+        <li>
+            <img src="image/courses.jpg" alt="courses" width="360">
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+        </li>
+    </ul>
+
     <!--Row-3-->
     
     <ul>
