--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>webstudio</title>
+    <link rel="stylesheet" href="./css/styles.css"
 </head>
 <body>
 
@@ -33,7 +34,7 @@
         <li><button type="button">Design</button></li>
         <li><button type="button">Marketing</button></li>
     </ul>
-    <!--Row-1-->
+    <!--Row-->
     <ul>
         <li>
             <img src="image/interface.jpg" alt="interface" width="360">
@@ -50,11 +51,6 @@
             <h3>Meditaion App</h3>
             <p>App</p>
         </li>
-    </ul>
-
-    <!--Row-2-->
-
-    <ul>
         <li>
             <img src="image/taxi.jpg" alt="taxi" width="360">
             <h3>Taxi Service</h3>
@@ -70,11 +66,6 @@
             <h3>Online Courses</h3>
             <p>Marketing</p>
         </li>
-    </ul>
-
-    <!--Row-3-->
-    
-    <ul>
         <li>
             <img src="image/stories.jpg" alt="" width="360">
             <h3>Instagram Stories Concept</h3>
