--- a/portfolio.html
+++ b/portfolio.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>webstudio</title>
+    <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css"
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
@@ -15,8 +15,8 @@
             <a href="/"><span>WEB</span>Studio</a>
         <nav>
             <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
+                <li><a href="./index.html">Studio</a></li>
+                <li><a href="./portfolio.html">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
@@ -28,7 +28,9 @@
 
 <!--Main-->
     <!--filters-->
+    <section>
     <ul>
+        <h1 hidden>
         <li><button type="button">All</button></li>
         <li><button type="button">Web Site</button></li>
         <li><button type="button">App</button></li>
@@ -39,51 +41,51 @@
     <ul>
         <li>
             <img src="image/interface.jpg" alt="interface" width="360">
-            <h3>Banking App Interface Concept</h3>
+            <h2>Banking App Interface Concept</h2>
             <p>App</p>
         </li>
         <li>
             <img src="image/payment.jpg" alt="payment" width="360">
-            <h3>Cashless Payment</h3>
+            <h2>Cashless Payment</h2>
             <p>Marketing</p>
         </li>
         <li>
             <img src="image/meditaion.jpg" alt="meditaion" width="360">
-            <h3>Meditaion App</h3>
+            <h2>Meditaion App</h2>
             <p>App</p>
         </li>
         <li>
             <img src="image/taxi.jpg" alt="taxi" width="360">
-            <h3>Taxi Service</h3>
+            <h2>Taxi Service</h2>
             <p>Marketing</p>
         </li>
         <li>
             <img src="image/illustrations.jpg" alt="illustrations" width="360">
-            <h3>Screen Illustrations</h3>
+            <h2>Screen Illustrations</h2>
             <p>Design</p>
         </li>
         <li>
             <img src="image/courses.jpg" alt="courses" width="360">
-            <h3>Online Courses</h3>
+            <h2>Online Courses</h2>
             <p>Marketing</p>
         </li>
         <li>
             <img src="image/stories.jpg" alt="" width="360">
-            <h3>Instagram Stories Concept</h3>
+            <h2>Instagram Stories Concept</h2>
             <p>Design</p>
         </li>
         <li>
             <img src="image/organic food.jpg" alt="" width="360">
-            <h3>Organic Food</h3>
+            <h2>Organic Food</h2>
             <p>Web Site</p>
         </li>
         <li>
             <img src="image/coffee.jpg" alt="" width="360">
-            <h3>Fresh Coffee</h3>
+            <h2>Fresh Coffee</h2>
             <p>Web Site</p>
         </li>
     </ul>
-    
+</section>
 
 
 
