--- a/index.html
+++ b/index.html
@@ -5,91 +5,93 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>webstudio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
 <!--Header-->
-    <header>
-            <a href="/"><span>WEB</span>Studio</a>
-        <nav>
-            <ul>
-                <li><a href=""></a>Studio</a></li>
-                <li><a href=""></a>Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+    <header class="header">
+            <a class="header-logo" href="/"><span>WEB</span>Studio</a>
+        <nav class="header-nav">
+            <ul class="header-list">
+                <li class="header-item"><a href="./index.html">Studio</a></li>
+                <li class="header-item"><a href="./portfolio.html">Portfolio</a></li>
+                <li class="header-item"><a href="">Contacts</a></li>
             </ul>
         </nav>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <ul class="contacts">
+                <li class="header-mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="header-tel"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
     </header>
 
 <!--Main-->
     <main>
-    <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+    <section class="main">
+        <h1 class="main-title">Effective Solutions for Your Business</h1>
+        <button class="main-btn" type="button">Order Service</button>
 
     </section>
 
     <!--Section-1-->
-    <section>
-        <ul>
-            <li>
-                <h3>Strategy</h3>
-                <p>Our goal is to identify the business
+    <section class="about">
+        <ul class="about-catalog">
+            <li class="about-list">
+                <h3 class="about-title">Strategy</h3>
+                <p class="about-text">Our goal is to identify the business
                     problem to walk away with the perfect and creative solution. </p>
             </li>
-            <li>
-                <h3>Punctuality</h3>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            <li class="about-list">
+                <h3 class="about-title">Punctuality</h3>
+                <p class="about-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
-            <li>
-                <h3>Diligence</h3>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            <li class="about-list">
+                <h3 class="about-title">Diligence</h3>
+                <p class="about-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
-            <li>
-                <h3>Technologies</h3>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            <li class="about-list">
+                <h3 class="about-title">Technologies</h3>
+                <p class="about-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
         </ul>
     </section>
 
     <!--Section-2-->
-    <section>
-        <h2>What are we doing</h2>
-        <ul>
-            <li><img src="./image/img1.jpg" alt="monitor" width="360"></li>
-            <li><img src="./image/img2.jpg" alt="phone" width="360"></li>
-            <li><img src="./image/img3.jpg" alt="notebook" width="360"></li>
+    <section class="product">
+        <h2 class="product-title">What are we doing</h2>
+        <ul class="product-catalog">
+            <li class="product-item"><img src="./image/img1.jpg" alt="monitor" width="360"></li>
+            <li class="product-item"><img src="./image/img2.jpg" alt="phone" width="360"></li>
+            <li class="product-item"><img src="./image/img3.jpg" alt="notebook" width="360"></li>
         </ul>
     </section>
 
     <!--Section-3-->
-    <section>
-        <h2>Our Team</h2>
-        <ul>
-            <li>
+    <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-catalog">
+            <li class="team-item">
                 <img src="./image/team1.jpg" alt="Mark Guerrero" width="264">
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
+                <h3 class="team-tit">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
             </li>
-            <li>
+            <li class="team-item">
                 <img src="./image/team2.jpg" alt="Tom Ford" width="264">
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
+                <h3 class="team-tit">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
             </li>
-            <li>
+            <li class="team-item">
                 <img src="./image/team3.jpg" alt="Camila Garcia" width="264">
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
+                <h3 class="team-tit">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
             </li>
-            <li>
+            <li class="team-item">
                 <img src="./image/team4.jpg" alt="Daniel Wilson" width="264">
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
+                <h3 class="team-tit">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
             </li>
         </ul>
     </section>
@@ -97,8 +99,8 @@
 
 <!--Footer-->
     <footer>
-        <a href="/"><span>WEB</span>Studio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <a class="footer-logo" href="/"><span>WEB</span>Studio</a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     
 </body>
