--- a/portfolio.html
+++ b/portfolio.html
@@ -5,37 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
 <!--Header-->
     <header>
-            <a href="/"><span>WEB</span>Studio</a>
+            <a href="./index.html" class="logo"><span>WEB</span>Studio</a>
         <nav>
             <ul>
                 <li><a href="./index.html">Studio</a></li>
                 <li><a href="./portfolio.html">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+                <li><a href="" class="contacts">Contacts</a></li>
             </ul>
         </nav>
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li class="header-mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="header-tel"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
     </header>
 
 <!--Main-->
     <!--filters-->
     <section>
+        <h1 hidden></h1>
     <ul>
-        <h1 hidden>
-        <li><button type="button">All</button></li>
-        <li><button type="button">Web Site</button></li>
-        <li><button type="button">App</button></li>
-        <li><button type="button">Design</button></li>
-        <li><button type="button">Marketing</button></li>
+        <li class="filters-btn"><button type="button">All</button></li>
+        <li class="filters-btn"><button type="button">Web Site</button></li>
+        <li class="filters-btn"><button type="button">App</button></li>
+        <li class="filters-btn"><button type="button">Design</button></li>
+        <li class="filters-btn"><button type="button">Marketing</button></li>
     </ul>
     <!--Row-->
     <ul>
