--- a/portfolio.html
+++ b/portfolio.html
@@ -10,93 +10,94 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
 
-<!--Header-->
-    <header>
-            <a href="./index.html" class="logo"><span>WEB</span>Studio</a>
-        <nav>
-            <ul>
-                <li><a href="./index.html">Studio</a></li>
-                <li><a href="./portfolio.html">Portfolio</a></li>
-                <li><a href="" class="contacts">Contacts</a></li>
-            </ul>
-        </nav>
-            <ul>
-                <li class="header-mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="header-tel"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
-    </header>
+    <!--Header-->
+        <header class="header">
+                <a class="header-logo" href="/"><span>WEB</span>Studio</a>
+            <nav class="header-nav">
+                <ul class="header-list">
+                    <li class="header-item"><a href="./index.html">Studio</a></li>
+                    <li class="header-item"><a href="./portfolio.html">Portfolio</a></li>
+                    <li class="header-item"><a href="">Contacts</a></li>
+                </ul>
+            </nav>
+                <ul class="contacts">
+                    <li class="header-mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="header-tel"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                </ul>
+        </header>
 
 <!--Main-->
     <!--filters-->
-    <section>
-        <h1 hidden></h1>
-    <ul>
-        <li class="filters-btn"><button type="button">All</button></li>
-        <li class="filters-btn"><button type="button">Web Site</button></li>
-        <li class="filters-btn"><button type="button">App</button></li>
-        <li class="filters-btn"><button type="button">Design</button></li>
-        <li class="filters-btn"><button type="button">Marketing</button></li>
+    <section class="menu">
+        <h1 class="menu-title" hidden></h1>
+    <ul class="filters">
+        <li class="filters-link"><button class="filters-btn" type="button">All</button></li>
+        <li class="filters-link"><button class="filters-btn" type="button">Web Site</button></li>
+        <li class="filters-link"><button class="filters-btn" type="button">App</button></li>
+        <li class="filters-link"><button class="filters-btn" type="button">Design</button></li>
+        <li class="filters-link"><button class="filters-btn" type="button">Marketing</button></li>
     </ul>
     <!--Row-->
-    <ul>
-        <li>
+    <ul class="menu-catalog">
+        <li class="menu-list">
             <img src="image/interface.jpg" alt="interface" width="360">
-            <h2>Banking App Interface Concept</h2>
-            <p>App</p>
+            <h2 class="menu-tit">Banking App Interface Concept</h2>
+            <p class="menu-text">App</p>
         </li>
-        <li>
+        <li class="menu-list">
             <img src="image/payment.jpg" alt="payment" width="360">
-            <h2>Cashless Payment</h2>
-            <p>Marketing</p>
+            <h2 class="menu-tit">Cashless Payment</h2>
+            <p class="menu-text">Marketing</p>
         </li>
-        <li>
+        <li class="menu-list">
             <img src="image/meditaion.jpg" alt="meditaion" width="360">
-            <h2>Meditaion App</h2>
-            <p>App</p>
+            <h2 class="menu-tit">Meditaion App</h2>
+            <p class="menu-text">App</p>
         </li>
-        <li>
+        <li class="menu-list">
             <img src="image/taxi.jpg" alt="taxi" width="360">
-            <h2>Taxi Service</h2>
-            <p>Marketing</p>
+            <h2 class="menu-tit">Taxi Service</h2>
+            <p class="menu-text">Marketing</p>
         </li>
-        <li>
+        <li class="menu-list">
             <img src="image/illustrations.jpg" alt="illustrations" width="360">
-            <h2>Screen Illustrations</h2>
-            <p>Design</p>
+            <h2 class="menu-tit">Screen Illustrations</h2>
+            <p class="menu-text">Design</p>
         </li>
-        <li>
+        <li class="menu-list">
             <img src="image/courses.jpg" alt="courses" width="360">
-            <h2>Online Courses</h2>
-            <p>Marketing</p>
+            <h2 class="menu-tit">Online Courses</h2>
+            <p class="menu-text">Marketing</p>
         </li>
-        <li>
+        <li class="menu-list">
             <img src="image/stories.jpg" alt="" width="360">
-            <h2>Instagram Stories Concept</h2>
-            <p>Design</p>
+            <h2 class="menu-tit">Instagram Stories Concept</h2>
+            <p class="menu-text">Design</p>
         </li>
-        <li>
+        <li class="menu-list">
             <img src="image/organic food.jpg" alt="" width="360">
-            <h2>Organic Food</h2>
-            <p>Web Site</p>
+            <h2 class="menu-tit">Organic Food</h2>
+            <p class="menu-text">Web Site</p>
         </li>
-        <li>
+        <li class="menu-list">
             <img src="image/coffee.jpg" alt="" width="360">
-            <h2>Fresh Coffee</h2>
-            <p>Web Site</p>
+            <h2 class="menu-tit">Fresh Coffee</h2>
+            <p class="menu-text">Web Site</p>
         </li>
     </ul>
 </section>
 
 
 
- <!--Footer-->
- <footer>
-    <a href="/"><span>WEB</span>Studio</a>
-    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-</footer>
-
+<!--Footer-->
+    <footer>
+        <a class="footer-logo" href="/"><span>WEB</span>Studio</a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </footer>
+    
 </body>
 
 </html>   
