--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
 
 <!--Header-->
     <header class="header">
-            <a class="header-logo" href="/"><span>WEB</span>Studio</a>
+            <a class="header-logo link" href="/"><span>WEB</span>Studio</a>
         <nav class="header-nav">
-            <ul class="header-list">
-                <li class="header-item"><a href="./index.html">Studio</a></li>
-                <li class="header-item"><a href="./portfolio.html">Portfolio</a></li>
-                <li class="header-item"><a href="">Contacts</a></li>
+            <ul class="header-list list">
+                <li class="header-item"><a class="header-link link" href="./index.html">Studio</a></li>
+                <li class="header-item"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
+                <li class="header-item"><a class="header-link link" href="">Contacts</a></li>
             </ul>
         </nav>
-            <ul class="contacts">
-                <li class="header-mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="header-tel"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
+            <ul class="contacts list">
+                <li class="header-mail"><a class="header-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="header-tel"><a class="header-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul> 
     </header>
 
 <!--Main-->
@@ -39,7 +39,7 @@
 
     <!--Section-1-->
     <section class="about">
-        <ul class="about-catalog">
+        <ul class="about-catalog list">
             <li class="about-list">
                 <h3 class="about-title">Strategy</h3>
                 <p class="about-text">Our goal is to identify the business
@@ -63,7 +63,7 @@
     <!--Section-2-->
     <section class="product">
         <h2 class="product-title">What are we doing</h2>
-        <ul class="product-catalog">
+        <ul class="product-catalog list">
             <li class="product-item"><img src="./image/img1.jpg" alt="monitor" width="360"></li>
             <li class="product-item"><img src="./image/img2.jpg" alt="phone" width="360"></li>
             <li class="product-item"><img src="./image/img3.jpg" alt="notebook" width="360"></li>
@@ -73,7 +73,7 @@
     <!--Section-3-->
     <section class="team">
         <h2 class="team-title">Our Team</h2>
-        <ul class="team-catalog">
+        <ul class="team-catalog list">
             <li class="team-item">
                 <img src="./image/team1.jpg" alt="Mark Guerrero" width="264">
                 <h3 class="team-tit">Mark Guerrero</h3>
@@ -99,8 +99,8 @@
     </main>
 
 <!--Footer-->
-    <footer>
-        <a class="footer-logo" href="/"><span>WEB</span>Studio</a>
+    <footer class="footer">
+        <a class="footer-logo link" href="/"><span class="footer-logo-web">WEB</span>Studio</a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     
