--- a/portfolio.html
+++ b/portfolio.html
@@ -15,25 +15,25 @@
 
     <!--Header-->
         <header class="header">
-                <a class="header-logo" href="/"><span>WEB</span>Studio</a>
+                <a class="header-logo link" href="/"><span>WEB</span>Studio</a>
             <nav class="header-nav">
-                <ul class="header-list">
-                    <li class="header-item"><a href="./index.html">Studio</a></li>
-                    <li class="header-item"><a href="./portfolio.html">Portfolio</a></li>
-                    <li class="header-item"><a href="">Contacts</a></li>
+                <ul class="header-list list">
+                    <li class="header-item"><a class="header-link link" href="./index.html">Studio</a></li>
+                    <li class="header-item"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
+                    <li class="header-item"><a class="header-link link" href="">Contacts</a></li>
                 </ul>
             </nav>
-                <ul class="contacts">
-                    <li class="header-mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="header-tel"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-                </ul>
+                <ul class="contacts list">
+                    <li class="header-mail"><a class="header-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="header-tel"><a class="header-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                </ul> 
         </header>
 
 <!--Main-->
     <!--filters-->
     <section class="menu">
-        <h1 class="menu-title" hidden></h1>
-    <ul class="filters">
+        <h1 class="" hidden>Portfolio</h1>
+    <ul class="filters list">
         <li class="filters-link"><button class="filters-btn" type="button">All</button></li>
         <li class="filters-link"><button class="filters-btn" type="button">Web Site</button></li>
         <li class="filters-link"><button class="filters-btn" type="button">App</button></li>
@@ -41,7 +41,7 @@
         <li class="filters-link"><button class="filters-btn" type="button">Marketing</button></li>
     </ul>
     <!--Row-->
-    <ul class="menu-catalog">
+    <ul class="menu-catalog list">
         <li class="menu-list">
             <img src="image/interface.jpg" alt="interface" width="360">
             <h2 class="menu-tit">Banking App Interface Concept</h2>
@@ -50,6 +50,7 @@
         <li class="menu-list">
             <img src="image/payment.jpg" alt="payment" width="360">
             <h2 class="menu-tit">Cashless Payment</h2>
+            <p class="menu-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
             <p class="menu-text">Marketing</p>
         </li>
         <li class="menu-list">
@@ -78,7 +79,7 @@
             <p class="menu-text">Design</p>
         </li>
         <li class="menu-list">
-            <img src="image/organic food.jpg" alt="" width="360">
+            <img src="/image/organic-food.jpg" alt="" width="360">
             <h2 class="menu-tit">Organic Food</h2>
             <p class="menu-text">Web Site</p>
         </li>
@@ -94,7 +95,7 @@
 
 <!--Footer-->
     <footer>
-        <a class="footer-logo" href="/"><span>WEB</span>Studio</a>
+        <a class="footer-logo link" href="/"><span>WEB</span>Studio</a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     
