--- a/portfolio.html
+++ b/portfolio.html
@@ -40,6 +40,7 @@
         <li class="filters-link"><button class="filters-btn" type="button">Design</button></li>
         <li class="filters-link"><button class="filters-btn" type="button">Marketing</button></li>
     </ul>
+    
     <!--Row-->
     <ul class="menu-catalog list">
         <li class="menu-list">
@@ -92,10 +93,11 @@
 </section>
 
 
-
 <!--Footer-->
     <footer>
-        <a class="footer-logo link" href="/"><span>WEB</span>Studio</a>
+        <!--Footer-->
+    <footer class="footer">
+        <a class="footer-logo link" href="/"><span class="footer-logo-web">WEB</span>Studio</a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     
