--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <!--Header-->
     <header class="header">
-            <a class="header-logo link" href="/"><span>WEB</span>Studio</a>
+            <a class="header-logo link" href="/"><span class="header-logo-web">WEB</span>STUDIO</a>
         <nav class="header-nav">
             <ul class="header-list list">
                 <li class="header-item"><a class="header-link link" href="./index.html">Studio</a></li>
@@ -100,7 +100,7 @@
 
 <!--Footer-->
     <footer class="footer">
-        <a class="footer-logo link" href="/"><span class="footer-logo-web">WEB</span>Studio</a>
+        <a class="footer-logo link" href="/"><span class="footer-logo-web">WEB</span>STUDIO</a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     
