--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 
     <!--Header-->
         <header class="header">
-                <a class="header-logo link" href="/"><span>WEB</span>Studio</a>
+                <a class="header-logo link" href="/"><span class="header-logo-web">WEB</span>STUDIO</a>
             <nav class="header-nav">
                 <ul class="header-list list">
                     <li class="header-item"><a class="header-link link" href="./index.html">Studio</a></li>
@@ -32,7 +32,7 @@
 <!--Main-->
     <!--filters-->
     <section class="menu">
-        <h1 class="" hidden>Portfolio</h1>
+        <h1 class="visually-hidden" hidden>Portfolio</h1>
     <ul class="filters list">
         <li class="filters-link"><button class="filters-btn" type="button">All</button></li>
         <li class="filters-link"><button class="filters-btn" type="button">Web Site</button></li>
@@ -94,7 +94,7 @@
 
         <!--Footer-->
     <footer class="footer">
-        <a class="footer-logo link" href="/"><span class="footer-logo-web">WEB</span>Studio</a>
+        <a class="footer-logo link" href="/"><span class="footer-logo-web">WEB</span>STUDIO</a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     
