внесення змін за зауваженнями

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,6 +30,8 @@
         </header>
 
 <!--Main-->
+    <main>
+
     <!--filters-->
     <section class="menu">
         <h1 class="visually-hidden" hidden>Portfolio</h1>
@@ -90,7 +92,9 @@
             <p class="menu-text">Web Site</p>
         </li>
     </ul>
-</section>
+    
+    </section>
+    </main>
 
         <!--Footer-->
     <footer class="footer">
